RESOLVED FIXED276585
[GTK][MiniBrowser] Amazon Luna landing page doesn't render
https://bugs.webkit.org/show_bug.cgi?id=276585
Summary [GTK][MiniBrowser] Amazon Luna landing page doesn't render
Philippe Normand
Reported 2024-07-14 01:13:41 PDT
Works with WPE/Cog. Nothing renders, loading the web-inspector triggers an infinite loop of "certificate required" popups.
Attachments
Kdwk
Comment 1 2024-07-15 07:11:33 PDT
The page works fine on WebKitGTK 2.45.5/ Gnome Web 47.alpha-45-gc0cce2581+
Philippe Normand
Comment 2 2024-07-15 07:45:16 PDT
It loads in Ephy Canary too... But MiniBrowser built from main doesn't render that page here...
Carlos Bentzen
Comment 3 2024-08-05 16:55:56 PDT
EWS
Comment 4 2024-08-06 10:53:07 PDT
Committed 281898@main (d16890bc3dd2): <https://commits.webkit.org/281898@main> Reviewed commits have been landed. Closing PR #31756 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.