[GTK][MiniBrowser] Amazon Luna landing page doesn't render https://bugs.webkit.org/show_bug.cgi?id=276585

Reviewed by Michael Catanzaro.

Amazon Luna (luna.amazon.com) assumes that the user agent is on MacOS if
`window.webkit` is defined, leading to JS calls that only work in the
Apple Mac WebKit port.

`window.webkit` was defined in the GTK MiniBrowser because it registers
a script message handler "aboutData", which makes
`window.webkit.messageHandlers.aboutData.postMessage(msg)` available to
scripts. However, this is only useful for the "about:data" custom page
that is defined in the MiniBrowser.

To have MiniBrowser still working like before but also supporting Amazon
Luna, only register the script message handler when loading "about:*" pages.

* Tools/MiniBrowser/gtk/BrowserTab.c:
(toggleAboutDataScriptMessageHandler):
(loadChanged):
* Tools/MiniBrowser/gtk/main.c:
(activate):

Canonical link: https://commits.webkit.org/281898@main